syntax="proto3";

option go_package="./pb;pb";

message User {
    int64 id = 1;
    int64 role_id = 2;
    string phone_number = 3;
    string name = 4;
    string avatar = 5;
}
